# GROWING

./: .gitignore  CMakeLists.txt  GROWING.vcxproj  GROWING.vcxproj.filters  Makefile  README.md  game.c  game.h  growing  main.c  scene_credits.c  scene_manager.c  scene_manager.h  sdl.c
GROWING/: main.c  scene.h  scene_collection.c  scene_game.c  scene_mainmenu.c  scene_settings.c
assets/: plants.json  weather_state.txt  weather_update.py
assets/data/: cloud.json  event_bugSpray  event_bugs  event_bugs.json  event_food.json  event_gompang  event_gompang.json  event_gompangSpray  event_tempDown.json  event_tempUp.json  event_water.json  garagame.json  loading_leaf.json  mainscene.json  monsteraLv2.json  monsteraLv3.json  night.json  rainny.json  snowy.json  sunny.json  sunset.json
core/: plant_db.c  save.c
include/: anim_util.h  common.h  core.h  gameplay.h  loading.h  save.h  scene.h  settings.h  ui.h  utils.h  weather.h
scenes/: scene_codex.c  scene_collection.c  scene_credits.c  scene_game.c  scene_loading.c  scene_mainmenu.c  scene_plantinfo.c  scene_plantinfo.h  scene_selectplant.c  scene_settings.c
ui/: ui_button.c  ui_progressbar.c
utils/: anim_util.c  parson.c  settings.c  timer.c  weather.c
